@@ -225,12 +225,13 @@ o Context Help in wxDialog object
 
    Typical Usage:
 
+    import wxaddons.sized_controls as sc
     from itrade_wxutil import iTradeSizedDialog
     ...
     class myForm(iTradeSizedDialog):
 
-	def __init__()
-		iTradeSizedDialog.__init__(...,style=wx.DEFAULT_DIALOG_STYLE | wx.RESIZE_BORDER,...)
+	def __init__(self,...):
+		iTradeSizedDialog.__init__(self,...,style=wx.DEFAULT_DIALOG_STYLE | wx.RESIZE_BORDER,...)
 
         	# container
         	container = self.GetContentsPane()
